--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/icono.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/assets/style.css">
     <title>JUVI</title>
 
   </head>
